<resources>
    <string name="app_name">Goggles4u</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_listing">Products</string>
    <string name="title_activity_filter">Filter Options</string>
    <string name="title_activity_product_details">Product Details</string>
    <string name="title_activity_try_on">TryOn</string>
    <string name="description">hello</string>
    <string name="newarrival">NEW ARRIVALS</string>
    <string name="ourcoletion">OUR COLLECTIONS</string>
    <string name="title_activity_product">ProductActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_prescription">Prescription</string>
    <string name="title_activity_prescription_next">Select Lenses</string>
    <string name="lense1">1.57 CR39 Lenses+$0.00</string>
    <string name="lense2">1.57 CR39 Premium Lens with EMI+$23.00</string>
    <string name="lense3">1.61 High Index Lenses+$32.95</string>
    <string name="lense4">1.67 High Index Lenses+$47.95</string>
    <string name="lense5">1.56 Photocromic Grey+$32.95</string>
    <string name="lense6">1.56 Photocromic Brown+$32.95</string>
    <string name="lenses">Select Lense</string>
    <string name="tinting">Tinting:</string>
    <string name="anticoating">Anti Refl. Coating:</string>
    <string name="quantity">Quantity :</string>
    <string name="title_activity_my_account">My Account</string>
    <string name="title_activity_shopping_cart">My Cart</string>
    <string name="sphere">Sphr.</string>
    <string name="cylinder">Cyli.</string>
    <string name="axis">Axis</string>
    <string name="add">Add</string>
    <string name="pd">PD</string>
    <string name="prism">Prism</string>
    <string name="od">OD</string>
    <string name="os">OS</string>
    <string name="prestype">Prescription Type:</string>
    <string name="lens">Lens:</string>
    <string name="antireflectivecode">Anti Refl. Coating:</string>
    <string name="subtotal">SubTotal : </string>
    <string name="grandtotal">Grand Total :</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">Enter your name</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_fname">Enter First Name</string>
    <string name="error_invalid_lname">Enter Last Name</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Enter Email id</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="erroremail">Enter Email id</string>
    <string name="errorfnamemsg">Enter First Name</string>
    <string name="errorlnamemsg">Enter Last Name</string>
    <string name="errorpassword">Enter Password</string>
    <string name="fstname">First Name</string>
    <string name="middlename">Middle Name</string>
    <string name="lstname">Last Name</string>
    <string name="pswdnotmatch">Password not match</string>

    <string name="forgtpswd">Forgot Password</string>
    <string name="cnfpwd">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="frgtpswdhintmsg">Enter Registered EmailID.</string>
    <string name="title_activity_for_got_pswd">Forgot Password</string>
    <string name="title_activity_check_out">CheckOut</string>

    <!-- Strings related to Checkout -->
    <string name="company">Company</string>
    <string name="addrs">Address</string>
    <string name="addrs2">Street Address</string>
    <string name="city">City</string>
    <string name="zipcode">Zip/Postal Code</string>
    <string name="teephone">Telephone</string>
    <string name="state">State Name</string>
    <string name="fax">Fax</string>
    <string name="slctstate">Select state </string>
    <string name="slctcountry">Select country </string>
    <string name="shipthisads">Ship to this Address</string>
    <string name="shipdiffads">Ship to diffrent Address</string>
    <string name="cntinue">Continue</string>
    <string name="current_amount">&#x20B9;</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="direction">Base Direction</string>
    <string name="prismval">Prism Value</string>
    <string name="prescriptname">Enter Prescription Name</string>
    <string name="presname">Pres. Name</string>
    <string name="created">Created by</string>
    <string name="date">Created Date</string>
    <string name="actions">Actions</string>
    <string name="title_activity_my_order_row">MyOrderRowActivity</string>
    <string name="title_activity_store_credit_data">StoreCredit</string>
    <string name="title_activity_my_orders">My Orders</string>
    <string name="title_activity_view_order">ViewOrder</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_prescriptions">Prescription List</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_edit_information">Edit Information</string>
    <string name="title_activity_prescription_view">Prescription Details</string>
    <string name="login_alert">Please do login first!</string>
    <string name="title_activity_new_filter">Filter Options</string>
    <string name="color">Color</string>
    <string name="framesize">Frame Size</string>
    <string name="framestyle">Frame Style</string>
    <string name="shape">Shape</string>
    <string name="material">Material</string>
    <string name="prescriptionty">Prescription Type</string>

    <string name="manuf">Manufacturer</string>
    <string name="frametype">Frame Type</string>
    <string name="price">Price</string>
    <string name="title_activity_sorting">Sorting Options</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_my_accounts_fragment">MyAccountsFragment</string>
    <string name="title_activity_my_order_fragment">MyOrderFragment</string>

    <string name="nonet">Check connection,Tap to try again. </string>

    <!-- Product Details-->
    <string name="templesize">Temple Size</string>
    <string name="nosebridge">Nose Bridge</string>
    <string name="eyeheight">Eye Height</string>
    <string name="eyewidth">Eye Width</string>
    <string name="framewidth">Frame Width</string>
    <string name="sku">SKU</string>
    <string name="productname">Product Name</string>
    <string name="title_activity_checkout">Checkout</string>
    <string name="title_activity_select_address">Select Address</string>
    <string name="title_activity_order_review">Order Review</string>
    <string name="title_activity_payment">Payment</string>
    <string name="title_activity_shipping">Shipping Address</string>
    <string name="title_activity_paypal">Paypal</string>


    <string name="paypal_clientid">Abtd0XUeHxMr3j4Y6tvQYPfgEZzn0z5fhdl6XHZ_pi9_K0czmuncw7O74HQcDRtLR_lFTR5NRxodUxtN</string>
    <string name="title_activity_contact_us">Contact Us</string>

    <string name="title_activity_privacy">PrivacyActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_ccdetails">CCDetailsActivity</string>
    <string name="title_activity_fav_list">Favorite items </string>
    <string name="title_activity_help_center">HelpCenter</string>
    <string name="title_activity_help_row">Help Details</string>
    <string name="title_activity_order_complete">Order Success</string>
    <string name="title_activity_product_listing_new">ProductListingNew</string>
    <string name="title_activity_upload_prescription">Upload Prescription</string>


    <string name="prescription_eyeglasses">PRESCRIPTION EYEGLASSES</string>
    <string name="designer_glasses">DESIGNER GLASSES</string>
    <string name="home">HOME</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Log In</string>
    <string name="invite_friends">Invite a Friend</string>
    <string name="logout">Logout</string>
    <string name="my_orders">MY ORDERS</string>
    <string name="favorites">FAVORITES</string>
    <string name="upload_prescription">UPLOAD PRESCRIPTION</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="help_center">HELP CENTER</string>
    <string name="settings">SETTINGS</string>
    <string name="sort_by">SORT BY</string>

</resources>
