<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.ts.mobilelab.goggles4u.ForGotPswdActivity"
    tools:showIn="@layout/activity_for_got_pswd">
    <TextView
        android:id="@+id/tv_fpwdview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dip"
        android:padding="5dip"
        android:text="@string/forgtpswd"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_below="@+id/tv_fpwdview"
        android:layout_marginTop="10dip"
        android:layout_height="wrap_content"
        android:id="@+id/view">

    <EditText
        android:id="@+id/et_fpwdemail"

        android:textColor="@color/darkgray"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:hint="@string/frgtpswdhintmsg"

        android:gravity="center_vertical"
        android:inputType="textEmailAddress" >


    </EditText>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_fpwdsubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:padding="10dip"
        android:text="@string/submit"
        android:textColor="@color/white"
android:background="@color/active_green"
        android:textStyle="bold"
        android:layout_below="@+id/view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp" />
</RelativeLayout>
